# cem

./: .gitignore  README.md  configure.ac  wscript
data/: cem.gresource.xml  script.sh
data/glade/: cem_menu.glade  main.glade
docs/xml/: index.xml
src/: Makefile.am  cem.c  cem.h  wscript
src/cad/: bs_cad_object.c  bs_cad_object.h  bs_cad_point.c  bs_cad_point.h
src/ds/: common_utils.h  list.c  list.h  wscript
src/gui/: Makefile.am  bs_glade_resource.c  bs_gui.c  bs_gui_application.c  bs_gui_application.h  bs_gui_main_window.c  bs_gui_main_window.h  wscript
src/gui/widgets/: bs_gui_gl_area.c  bs_gui_gl_area.h
